libraries/stzlib/base/test/log.txt
In file included from D:/mingw64/x86_64-w64-mingw32/include/time.h:323,
                 from temp.c:292:
D:/mingw64/x86_64-w64-mingw32/include/pthread_time.h: In function 'main':
D:/mingw64/x86_64-w64-mingw32/include/pthread_time.h:79:39: error: invalid storage class for function 'nanosleep'
   79 | WINPTHREAD_NANOSLEEP_DECL int __cdecl nanosleep(const struct timespec *request, struct timespec *remain)
      |                                       ^~~~~~~~~
D:/mingw64/x86_64-w64-mingw32/include/pthread_time.h:90:35: error: invalid storage class for function 'clock_nanosleep'
   90 | WINPTHREAD_CLOCK_DECL int __cdecl clock_nanosleep(clockid_t clock_id, int flags, const struct timespec *request, struct timespec *remain)
      |                                   ^~~~~~~~~~~~~~~
D:/mingw64/x86_64-w64-mingw32/include/pthread_time.h:101:35: error: invalid storage class for function 'clock_getres'
  101 | WINPTHREAD_CLOCK_DECL int __cdecl clock_getres(clockid_t clock_id, struct timespec *res)
      |                                   ^~~~~~~~~~~~
D:/mingw64/x86_64-w64-mingw32/include/pthread_time.h:112:35: error: invalid storage class for function 'clock_gettime'
  112 | WINPTHREAD_CLOCK_DECL int __cdecl clock_gettime(clockid_t clock_id, struct timespec *tp)
      |                                   ^~~~~~~~~~~~~
D:/mingw64/x86_64-w64-mingw32/include/pthread_time.h:123:35: error: invalid storage class for function 'clock_settime'
  123 | WINPTHREAD_CLOCK_DECL int __cdecl clock_settime(clockid_t clock_id, const struct timespec *tp)
      |                                   ^~~~~~~~~~~~~
